--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/jobegood49/apollerServerTuto#readme",
   "dependencies": {
     "apollo-server": "^2.1.0",
+    "graph-tools": "^0.1.2",
     "graphql": "^14.0.2"
   }
 }
