--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "apollo-server": "^2.1.0",
     "graph-tools": "^0.1.2",
-    "graphql": "^14.0.2"
+    "graphql": "^14.0.2",
+    "lodash": "^4.17.11"
   }
 }
